--- a/Scripts/Final_Scripts/analyses/2_gam.Rmd
+++ b/Scripts/Final_Scripts/analyses/2_gam.Rmd
@@ -112,8 +112,10 @@ no_outliers_sample_df <- analyses_df_noNA %>%
 chart.Correlation(no_outliers_sample_df %>% dplyr::select(-c(trend_forestpercentage, trend_grasspercentage)), histogram = TRUE, method = "spearman",  pch= 19)
 
 #plot
-pivot_df <- no_outliers_sample_df %>% dplyr::select(-c(x,y, trend_forestpercentage, trend_grasspercentage)) %>%
-  pivot_longer(1:23)
+pivot_df <- no_outliers_sample_df %>% 
+  dplyr::select(-c(x,y, trend_forestpercentage, trend_grasspercentage, ndvi_monthly_stable,
+                   ndvi_monthly_step_dec, ndvi_monthly_lin_dec, ndvi_monthly_lin_inc, ndvi_monthly_quad_dec_acc, ndvi_monthly_quad_dec_decc, ndvi_monthly_quad_inc_acc, ndvi_monthly_quad_inc_dec)) %>%
+  pivot_longer(1:15)
 distribution_plot <- ggplot(data = pivot_df, aes(value)) +
   geom_histogram() +facet_wrap(~name, scales = "free", labeller = label_wrap_gen(4)) +
   theme_classic(base_size = 16)
@@ -745,6 +747,7 @@ Sys.time(); model_interact_previous_savanna_temp_re <- mgcv::bam( cbind(ndvi_mon
                                               trend_forestpercentage, trend_grasspercentage)), method = "fREML", family = quasibinomial(link = "logit")); Sys.time()
 summary(model_interact_previous_savanna_temp_re)
 gratia::draw (model_interact_previous_savanna_temp_re, rug= F)
+mgcv::gam.check(model_interact_previous_savanna_temp_re)
 
 #Interaction 11 -previous model excluding mean of predictors
 #Sys.time(); model_interact_previous_no_means<- mgcv::bam( cbind(ndvi_monthly_step_inc, 25- ndvi_monthly_step_inc) ~ 
@@ -1098,6 +1101,12 @@ plot_interaction_anthropicdist_savannapercentage <- ggplot(pivot_plot_df, aes(x 
   xlab ("Anthropic Distance") +
   theme(legend.title=element_blank())
 
+
+library(ggpubr)
+two_interactions <- ggarrange(plot_interaction_temp_re, plot_interaction_heatwave_spei, plot_interaction_anthropicdist_savannapercentage, plot_interaction_anthropicdist_burnedarea, ncol = 2, nrow = 2)
+ggsave(here(output_file_path, paste0("2way_interaction_partialeffects.png")),
+       two_interactions,dpi = 700, height = 25, width=25, units = "cm")
+
 ```
 
 
@@ -1400,6 +1409,12 @@ plot_interaction_temp_re_savanna <- ggplot(pivot_plot_df, aes(x = trend_annualte
   xlab ("Trend in annual temperature") +
   theme(legend.title=element_blank())
 
+
+temp_re_3way_interactions <- ggarrange(plot_interaction_temp_re_burnedarea, plot_interaction_temp_re_savanna, ncol = 1, nrow = 2)
+ggsave(here(output_file_path, paste0("3way_interact_temp_re_othervariable.png")),
+       temp_re_3way_interactions ,dpi = 700, height = 15, width=25, units = "cm")
+
+
 #2. Burnedarea, SPEI and heatwaves
 #1- Creating range of temp and re like previous chunk 
 heatwavesgrid_1 <- seq(min(no_outliers_sample_df$trend_heatwave),max(no_outliers_sample_df$trend_heatwave), len = 200)
@@ -1684,6 +1699,10 @@ plot_interaction_spei_heatwave_savanna <- ggplot(pivot_plot_df, aes(x = trend_he
   ylab ("Partial Effect") + 
   xlab ("Trend in heatwaves") +
   theme(legend.title=element_blank())
+
+spei_heatwaves_3way_interactions <- ggarrange(plot_interaction_spei_heatwave_burnedarea, plot_interaction_spei_heatwave_savanna, ncol = 1, nrow = 2)
+ggsave(here(output_file_path, paste0("3way_interact_spei_heatwave_othervariable.png")),
+       spei_heatwaves_3way_interactions ,dpi = 700, height = 15, width=25, units = "cm")
 
 ```
 
